syntax = "proto3";

package mdining;

import "api/proto/menu.proto";

message Food {
    string key = 1;
    string date = 2;
    string name = 3;
    repeated string category = 4;
    MenuItem menuItem = 5;
    map<string, FoodDiningHallMatch> diningHallMatch = 6;
}

message FoodDiningHallMatch {
    string name = 1;
    map<string, MealTime> mealTime = 2;
}

message MealTime {
    string date = 1;
    string formattedDate = 2;
    repeated string mealNames = 3;
}
