syntax = "proto3";

package mdining;

message FoodStat {
    string date = 1;
    map<string, int64> timesServed = 2;
    map<string, StringToInt> foodDiningHallCounts = 3;
    map<string, StringToInt> diningHallFoodCounts = 4;
    map<string, int64> categoryCounts = 5;
    map<string, int64> allergenCounts = 6;
    map<string, int64> attributeCounts = 7;
    map<int64, StringToInt> weekdayFoodCounts = 8;
    map<string, IntToInt> foodWeekdayCounts = 9;
    int64 numUniqueFoods = 10;
    int64 totalFoodMealsServed = 11;
    map<string, int64> diningHallMealsServed = 12;
}

message StringToInt {
    map<string, int64> data = 1;
}

message IntToInt {
    map<int64, int64> data = 1;
}
